rw-agent: split Math.random and Collections.shuffle too, not just the engine's generator
The tick split closed the engine's generator on 2026-08-07 and left the
other two seeded but shared. Seeding makes a run START from a known state;
it says nothing about whether the simulation's draws from it are a function
of the seed. Twelve engine call sites read Math.random(), whose holder is
JVM-global, so the render path and the simulation drew from one stream at
moments only the scheduler chooses.

The RandomLedger already had the evidence. Across eleven seeds replayed on
HPC3, every seed whose math= state agreed at frame 0 replicated bit-exact
over 250 samples, and every seed whose math= state differed at frame 0
forked -- with the engine stream diverging only AFTER the world already
had, which makes it consequence and not cause:

  8 replicating seeds   engine same    math same
  8128   FORK           engine 7200    math 0
  31337  FORK           engine 8175    math 0
  90210  FORK           engine 7950    math 0

Splitting Math alone moved the fork EARLIER, to s44, and that is how the
third leak surfaced: shuffle had been agreeing across all eleven seeds only
because the Math leak forked the world before shuffle could matter. With
Math split, shuffle became the first stream to diverge, at frame 600. A
leak is invisible until the louder one above it closes.

With all three split, four independent invocations of seed 31337 -- a seed
that forked 3/3 before any of this -- give two clusters instead of four
trajectories, shuffle agrees in every pair, math only breaks long after the
world does, and the fork has moved from s44 to s116. Not solved: the engine
stream still diverges at frame 300 between clusters, so one per-process
input still reaches the sim path.

Guarded rather than remembered: RandomChecks asserts that sim-phase and
render-phase draws come from different streams, that render draws do not
move the simulation's stream, and that setSeed re-pins it. The middle one